Stories overflow fix

--- a/components/Layout/RightSidebar/RightSidebar.module.scss
+++ b/components/Layout/RightSidebar/RightSidebar.module.scss
@@ -10,9 +10,13 @@
   min-height: 100vh;
   max-height: 100vh;
   border-left: 1px solid $primaryLight;
+  padding: 16px;
   .stories{
     width: 100%;
+    min-height: 160px;
     list-style-type: none;
+    overflow-y: scroll;
+    margin-bottom: 16px;
   }
   .contacts{
     width: 100%;
