--- a/components/MenuHeading/MenuHeading.module.scss
+++ b/components/MenuHeading/MenuHeading.module.scss
@@ -3,4 +3,5 @@
 .heading{
   font-weight: bold;
   color: $secondary;
+  margin: 8px 0;
 }
