--- a/components/Story/Story.module.scss
+++ b/components/Story/Story.module.scss
@@ -3,7 +3,6 @@
 .wrapper{
   display: flex;
   width: 100%;
-  margin: 8px 16px;
   gap: 0 16px;
   .picture{
     border: 2px solid $accent;
